--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -886,9 +886,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtar per entitats",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar per famílies d'etiquetes",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar per etiquetes",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Aquests filtres s'aplicaran a qualsevol consulta de cerca sense ser visibles per als usuaris finals.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Format de filtre <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documentat aquí </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtres preseleccionats",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre per línia",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre per línia, com ara /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Aquests filtres s'aplicaran a qualsevol consulta de cerca sense ser visibles per als usuaris finals.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Suggereix etiquetes",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
