--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -887,9 +887,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Nach Entitäten filtern",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtern Sie nach Etikettenfamilien",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Nach Labels filtern",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Diese Filter werden auf alle Suchanfragen angewendet, ohne dass sie für den Endbenutzer sichtbar sind.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Filterformat <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">hier dokumentiert </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Vorgewählte Filter",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Ein Filter pro Zeile",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Ein Filter pro Zeile, z. B. /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Diese Filter werden auf alle Suchanfragen angewendet, ohne dass sie für den Endbenutzer sichtbar sind.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Wenn das Training der Etikettensuchabsicht durchgeführt wurde, werden die auf der Grundlage der Abfrage vorgeschlagenen Etiketten angezeigt",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Schlagen Sie Etiketten vor",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Schlagen Sie Ergebnisse vor, während Sie eine Suchanfrage eingeben",
