--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -887,9 +887,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filter by entities",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filter by label families",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filter by labels",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "These filters will be applied to any search queries without being visible to the end users.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Filter format <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documented here </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Preselected filters",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "One filter by line",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "One filter by line, like /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "These filters will be applied to any search queries without being visible to the end users.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "When label search intent training has been done, displays labels suggested based on the query",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Suggest labels",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggest results while typing search query",
