--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -886,9 +886,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrar por entidades",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar por familias de etiquetas",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar per etiquetas",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Estos filtros se aplicarán a cualquier consulta de búsqueda sin ser visibles para los usuarios finales.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Formato de filtro <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documentado aquí </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtros preseleccionados",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtro por línea",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtro por línea, como /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Estos filtros se aplicarán a cualquier consulta de búsqueda sin ser visibles para los usuarios finales.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Sugerir etiquetas",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
