--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -887,9 +887,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrer par entités",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrer par familles d'étiquettes",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrer par libellés",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Ces filtres seront appliqués à toutes les requêtes de recherche sans être visibles pour les utilisateurs finaux.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Format de filtre <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documenté ici </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtres présélectionnés",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre par ligne",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Un filtre par ligne, comme /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Ces filtres seront appliqués à toutes les requêtes de recherche sans être visibles pour les utilisateurs finaux.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Une fois la formation sur l'intention de recherche d'étiquettes effectuée, affiche les étiquettes suggérées en fonction de la requête.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Proposer des libellés",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggérer des résultats lors de la saisie d'une requête de recherche",
