--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -887,9 +887,10 @@
 	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filtrar por entidades",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtrar por famílias de rótulos",
 	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filtrar por rótulos",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.help": "Esses filtros serão aplicados a qualquer consulta de pesquisa sem serem visíveis para os usuários finais.",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Formato de filtro <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documentado aqui </a>",
 	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Filtros pré-selecionados",
-	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Um filtro por linha",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Um filtro por linha, como /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Esses filtros serão aplicados a qualquer consulta de pesquisa sem serem visíveis para os usuários finais.",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Quando o treinamento de intenção de pesquisa de rótulo for concluído, exibirá rótulos sugeridos com base na consulta",
 	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Sugerir rótulos",
 	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Sugira resultados ao digitar a consulta de pesquisa",
