support summarize from resources list

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -516,6 +516,8 @@
 	"resource.confirm-reprocess.plural-description": "Necessitem un temps per processar les dades. Un cop reprocessats els podeu veure a la pàgina de llista de recursos disponible per editar, classificar o anotar.",
 	"resource.confirm-reprocess.plural-title": "Esteu segur que voleu tornar a processar els recursos?",
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
+	"resource.confirm-summarize.description": "El resum resultant s'emmagatzemarà al recurs. Aquesta operació pot trigar un temps, s'executarà en segon pla, podeu continuar utilitzant el tauler, però no tanqueu aquesta pàgina fins que no finalitzi l'operació.",
+	"resource.confirm-summarize.title": "Resumeix aquest recurs",
 	"resource.description.title": "Descripció",
 	"resource.empty": "No hi ha contingut al vostre Knowledge Box en aquest moment.",
 	"resource.empty_import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
@@ -569,6 +571,7 @@
 	"resource.menu.classify": "Classificar",
 	"resource.menu.edit": "Edita",
 	"resource.menu.label": "Més",
+	"resource.menu.summarize": "Resumir",
 	"resource.origin.collaborators": "Col·laboradors",
 	"resource.origin.collaborators-helper": "Llista de col·laboradors separats per comes",
 	"resource.origin.created": "Data creació",
