--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -517,6 +517,8 @@
 	"resource.confirm-reprocess.plural-description": "Wir benötigen etwas Zeit, um die Daten zu verarbeiten. Nach der erneuten Verarbeitung können Sie sie auf der Ressourcenlistenseite sehen und können sie bearbeiten, klassifizieren oder mit Anmerkungen versehen.",
 	"resource.confirm-reprocess.plural-title": "Sind Sie sicher, dass Sie die Ressourcen erneut verarbeiten möchten?",
 	"resource.confirm-reprocess.title": "Sind Sie sicher, dass Sie die Ressource erneut verarbeiten möchten?",
+	"resource.confirm-summarize.description": "Die resultierende Zusammenfassung wird in der Ressource gespeichert. Dieser Vorgang kann einige Zeit dauern, er wird im Hintergrund ausgeführt. Sie können das Dashboard weiterhin verwenden, aber schließen Sie diese Seite nicht, bis der Vorgang abgeschlossen ist.",
+	"resource.confirm-summarize.title": "Fassen Sie diese Ressource zusammen",
 	"resource.description.title": "Beschreibung",
 	"resource.empty": "In Ihrer Knowledge Box befinden sich derzeit keine Inhalte.",
 	"resource.empty_import": "Beginnen Sie sofort mit der Nutzung von Nuclia, indem Sie einen Beispieldatensatz auswählen. Dies ist der schnellste Weg, um loszulegen und zu erkunden, wie Nuclia funktioniert.",
@@ -570,6 +572,7 @@
 	"resource.menu.classify": "Klassifizieren",
 	"resource.menu.edit": "Bearbeiten",
 	"resource.menu.label": "Mehr",
+	"resource.menu.summarize": "Zusammenfassen",
 	"resource.origin.collaborators": "Mitarbeiter",
 	"resource.origin.collaborators-helper": "Durch Kommas getrennte Liste der Mitarbeiter",
 	"resource.origin.created": "Erstellt",
