--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -517,6 +517,8 @@
 	"resource.confirm-reprocess.plural-description": "We need some time to process the data. Once reprocessed you can see them on the resource list page available for editing, classifying or annotating.",
 	"resource.confirm-reprocess.plural-title": "Are you sure you want to reprocess the resources?",
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
+	"resource.confirm-summarize.description": "The resulting summary will be stored in the resource. This operation can take time, it will run in the background, you can continue using the dashboard, but do not close this page until the operation is finished.",
+	"resource.confirm-summarize.title": "Summarize this resource",
 	"resource.description.title": "Description",
 	"resource.empty": "There is no content in your Knowledge Box at the moment.",
 	"resource.empty_import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
@@ -570,6 +572,7 @@
 	"resource.menu.classify": "Classify",
 	"resource.menu.edit": "Edit",
 	"resource.menu.label": "More",
+	"resource.menu.summarize": "Summarize",
 	"resource.origin.collaborators": "Collaborators",
 	"resource.origin.collaborators-helper": "Comma-separated list of collaborators",
 	"resource.origin.created": "Created",
