--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -517,6 +517,8 @@
 	"resource.confirm-reprocess.plural-description": "Precisamos de algum tempo para processar os dados. Depois de reprocessados, você poderá vê-los na página da lista de recursos disponíveis para edição, classificação ou anotação.",
 	"resource.confirm-reprocess.plural-title": "Tem certeza de que deseja reprocessar os recursos?",
 	"resource.confirm-reprocess.title": "Tem certeza de que deseja reprocessar o recurso?",
+	"resource.confirm-summarize.description": "O resumo resultante será armazenado no recurso. Esta operação pode demorar, será executada em segundo plano, você pode continuar usando o painel, mas não feche esta página até que a operação seja concluída.",
+	"resource.confirm-summarize.title": "Resuma este recurso",
 	"resource.description.title": "Descrição",
 	"resource.empty": "Não há conteúdo em sua Knowledge Box no momento.",
 	"resource.empty_import": "Comece a usar o Nuclia instantaneamente escolhendo um conjunto de dados de amostra. Esta é a maneira mais rápida de começar e explorar como funciona o Nuclia.",
@@ -570,6 +572,7 @@
 	"resource.menu.classify": "Classificar",
 	"resource.menu.edit": "Editar",
 	"resource.menu.label": "Mais",
+	"resource.menu.summarize": "Resumir",
 	"resource.origin.collaborators": "Colaboradores",
 	"resource.origin.collaborators-helper": "Lista de colaboradores separados por vírgula",
 	"resource.origin.created": "Criado",
