--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -516,6 +516,8 @@
 	"resource.confirm-reprocess.plural-description": "Necesitamos algún tiempo para procesar los datos. Una vez reprocesados, podrá verlos en la página de la lista de recursos disponibles para editarlos, clasificarlos o anotarlos.",
 	"resource.confirm-reprocess.plural-title": "¿Está seguro de que desea reprocesar los recursos?",
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
+	"resource.confirm-summarize.description": "El resumen resultante se almacenará en el recurso. Esta operación puede llevar tiempo, se ejecutará en segundo plano, puede continuar usando el panel, pero no cierre esta página hasta que finalice la operación.",
+	"resource.confirm-summarize.title": "Resumir este recurso",
 	"resource.description.title": "Descripción",
 	"resource.empty": "No hay contenido en su Knowledge Box en este momento.",
 	"resource.empty_import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
@@ -569,6 +571,7 @@
 	"resource.menu.classify": "Clasificar",
 	"resource.menu.edit": "Editar",
 	"resource.menu.label": "Más",
+	"resource.menu.summarize": "Resumir",
 	"resource.origin.collaborators": "Colaboradores",
 	"resource.origin.collaborators-helper": "Lista de colaboradores separados por comas",
 	"resource.origin.created": "Data de creación",
