Update copy and translation keys on signup

--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Sortir",
 	"generic.or": "O",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
-	"login.boarding_title": "Embarcament a Nuclia",
 	"login.check_email.check_spams": "o comproveu la vostra carpeta de correu brossa.",
 	"login.check_email.details": "Feu clic a l'enllaç d'activació que us acabem d'enviar a <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "T’hem enviat un mail! :)",
@@ -15,9 +14,6 @@
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.dont_see": "No ho veus?",
 	"login.email": "Correu electrònic",
-	"login.email_already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
-	"login.email_signup": "Correu electrònic professional",
-	"login.email_signup_help": "Camp necessari. Només es permeten les adreces de correu electrònic de l'empresa.",
 	"login.error.auth_error": "Error d'autentificació.",
 	"login.error.get_consent_error": "S'ha produït un error a l'obtenir la informació de consentiment",
 	"login.error.google_workspace": "El registre amb Google està restringit als dominis de l'espai de treball, ho sento.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Nom complert",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "No tens un compte?",
-	"login.have_account_already": "Ja tens un compte?",
 	"login.login": "Accedir",
 	"login.password": "Contrasenya",
 	"login.recover": "Recuperar contrasenya",
 	"login.recover_help": "Problemes amb la paraula de pas?",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
-	"login.sign-up-with": "Registra't amb {{provider}}",
-	"login.signup": "Registra't!",
 	"login.subtitle": "Oferint les respostes adequades a partir de les vostres dades internes.",
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El testimoni ha caducat",
@@ -75,6 +68,13 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contrasenya",
 	"recover.verify": "Verifica el compte per canviar la contrasenya",
+	"signup.email.already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
+	"signup.email.help": "Camp necessari. Només es permeten les adreces de correu electrònic de l'empresa.",
+	"signup.have_account_already": "Ja tens un compte?",
+	"signup.name": "Nom",
+	"signup.sign-up-with": "Registra't amb {{provider}}",
+	"signup.signup-button-label": "Registra't!",
+	"signup.title": "Comença gratuïtament",
 	"validation.company-email": "Si us plau, utilitzeu un correu electrònic de l'empresa",
 	"validation.email": "Introdueix un correu electrònic vàlid",
 	"validation.password_minlength": "La contrasenya ha de tenir com a mínim 8 caràcters",
