--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Salir",
 	"generic.or": "O",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
-	"login.boarding_title": "Embarque Nuclia",
 	"login.check_email.check_spams": "o revisa tu carpeta de spam.",
 	"login.check_email.details": "Haga clic en el enlace de activación que le acabamos de enviar a <strong>{{ email }}</strong>.",
 	"login.check_email.email_sent": "Te hemos enviado un mail! :)",
@@ -15,9 +14,6 @@
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.dont_see": "¿No lo ves?",
 	"login.email": "Correo electrónico",
-	"login.email_already_exists": "Ya existe un usuario registrado con este correo electrónico",
-	"login.email_signup": "Correo electrónico profesional",
-	"login.email_signup_help": "Campo requerido. Sólo se permiten direcciones de correo electrónico de la empresa.",
 	"login.error.auth_error": "Error de autenticación.",
 	"login.error.get_consent_error": "Se ha producido un error al obtener la información de consentimiento",
 	"login.error.google_workspace": "Registrarse con Google está restringido a dominios de espacios de trabajo, lo siento.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Nombre completo",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "¿No tienes una cuenta?",
-	"login.have_account_already": "¿Ya tienes una cuenta?",
 	"login.login": "Iniciar sesión",
 	"login.password": "Contraseña",
 	"login.recover": "Recuperar contraseña",
 	"login.recover_help": "Problemas con la contraseña?",
 	"login.scope.kbs_read": "Acceder a tus cajas de conocimiento",
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
-	"login.sign-up-with": "Regístrese con {{provider}}",
-	"login.signup": "Regístrate!",
 	"login.subtitle": "Brindando las respuestas correctas a partir de sus datos internos.",
 	"login.title": "Bienvenidos a Nuclia",
 	"login.token_expired": "El token ha caducado",
@@ -75,6 +68,13 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contraseña",
 	"recover.verify": "Verifica la cuenta para cambiar la contraseña",
+	"signup.email.already_exists": "Ya existe un usuario registrado con este correo electrónico",
+	"signup.email.help": "Campo requerido. Sólo se permiten direcciones de correo electrónico de la empresa.",
+	"signup.have_account_already": "¿Ya tienes una cuenta?",
+	"signup.name": "Nombre",
+	"signup.sign-up-with": "Regístrese con {{provider}}",
+	"signup.signup-button-label": "Regístrate!",
+	"signup.title": "Comience gratis",
 	"validation.company-email": "Utilice un correo electrónico de la empresa",
 	"validation.email": "Introduce un correo electrónico válido",
 	"validation.password_minlength": "La contraseña debe tener al menos 8 caracteres",
