--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Déconnexion",
 	"generic.or": "Ou",
 	"login.access_request": "souhaite accéder à Nuclia en votre nom et être en mesure de :",
-	"login.boarding_title": "Embarquer avec Nuclia",
 	"login.check_email.check_spams": "ou vérifiez vos courriers indésirables.",
 	"login.check_email.details": "Cliquez sur le lien d'activation que nous venons de vous envoyer à <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "On vous a envoyé un email!",
@@ -15,9 +14,6 @@
 	"login.description": "Savoir ce que votre entreprise sait",
 	"login.dont_see": "Vous ne le voyez pas ?",
 	"login.email": "Email",
-	"login.email_already_exists": "Cet email existe déjà!",
-	"login.email_signup": "Email professionnel",
-	"login.email_signup_help": "Champ requis. Seules les adresses e-mail d'entreprise sont autorisées.",
 	"login.error.auth_error": "Erreur d'authentification.",
 	"login.error.get_consent_error": "Une erreur s'est produite lors de la récupération des informations relatives au consentement",
 	"login.error.google_workspace": "L'inscription avec Google est limitée aux domaines professionnels, désolé.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Nom complet",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Vous n’avez pas de compte ?",
-	"login.have_account_already": "Vous avez déjà un compte ?",
 	"login.login": "Se connecter",
 	"login.password": "Mot de passe",
 	"login.recover": "Récupérer mon mot de passe",
 	"login.recover_help": "Problèmes de connexion ?",
 	"login.scope.kbs_read": "Consulter vos boîtes à savoir",
 	"login.scope.kbs_write": "Modifier vos Boîtes à savoir",
-	"login.sign-up-with": "S'inscrire avec {{provider}}",
-	"login.signup": "S'inscrire",
 	"login.subtitle": "Fournir les bonnes réponses à partir de vos données internes.",
 	"login.title": "Bienvenue à Nuclia",
 	"login.token_expired": "Le jeton a expiré",
@@ -75,6 +68,13 @@
 	"recover.recover": "Récupérer",
 	"recover.title": "Récupérer votre mot de passe",
 	"recover.verify": "Vérifiez votre email et utilisez le lien fourni pour modifier votre mot de passe.",
+	"signup.email.already_exists": "Cet email existe déjà!",
+	"signup.email.help": "Champ requis. Seules les adresses e-mail d'entreprise sont autorisées.",
+	"signup.have_account_already": "Vous avez déjà un compte ?",
+	"signup.name": "Nom",
+	"signup.sign-up-with": "S'inscrire avec {{provider}}",
+	"signup.signup-button-label": "S'inscrire",
+	"signup.title": "Commencez gratuitement",
 	"validation.company-email": "Veuillez utiliser un email d’entreprise",
 	"validation.email": "Saisir un email valide",
 	"validation.password_minlength": "Le mot de passe doit comporter au moins 8 caractères",
