--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Sair",
 	"generic.or": "Ou",
 	"login.access_request": "deseja acessar a Nuclia em seu nome e ser capaz de:",
-	"login.boarding_title": "Embarque Núclia",
 	"login.check_email.check_spams": "ou verifique sua pasta de spam.",
 	"login.check_email.details": "Clique no link de ativação que acabamos de enviar para você em <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "Enviamos um e-mail para você!",
@@ -15,9 +14,6 @@
 	"login.description": "Saiba o que sua empresa sabe",
 	"login.dont_see": "Não vê isso?",
 	"login.email": "O email",
-	"login.email_already_exists": "Esse endereço de email já existe!",
-	"login.email_signup": "E-mail profissional",
-	"login.email_signup_help": "Campo obrigatório. Somente endereços de e-mail corporativos são permitidos.",
 	"login.error.auth_error": "Erro de autenticação.",
 	"login.error.get_consent_error": "Ocorreu um erro ao recuperar informações de consentimento",
 	"login.error.google_workspace": "A inscrição no Google é restrita a domínios de espaço de trabalho, desculpe.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Nome completo",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Não tem uma conta?",
-	"login.have_account_already": "Já tem uma conta?",
 	"login.login": "Entrar",
 	"login.password": "Senha",
 	"login.recover": "Recuperar Senha",
 	"login.recover_help": "Problemas para fazer login?",
 	"login.scope.kbs_read": "Veja suas caixas de conhecimento",
 	"login.scope.kbs_write": "Modifique suas caixas de conhecimento",
-	"login.sign-up-with": "Inscreva-se com {{provider}}",
-	"login.signup": "Inscrever-se",
 	"login.subtitle": "Fornecendo as respostas certas a partir de seus dados internos.",
 	"login.title": "Bem-vindo à Nuclia",
 	"login.token_expired": "O token expirou",
@@ -75,6 +68,13 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupere sua senha",
 	"recover.verify": "Verifique seu e-mail e use o link fornecido para alterar sua senha",
+	"signup.email.already_exists": "Esse endereço de email já existe!",
+	"signup.email.help": "Campo obrigatório. Somente endereços de e-mail corporativos são permitidos.",
+	"signup.have_account_already": "Já tem uma conta?",
+	"signup.name": "Nome",
+	"signup.sign-up-with": "Inscreva-se com {{provider}}",
+	"signup.signup-button-label": "Inscrever-se",
+	"signup.title": "Comece gratuitamente",
 	"validation.company-email": "Use um e-mail corporativo",
 	"validation.email": "Entre com um email válido",
 	"validation.password_minlength": "A senha deve ter pelo menos 8 caracteres",
