--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Ausloggen",
 	"generic.or": "ODER",
 	"login.access_request": "möchte in Ihrem Namen auf Nuclia zugreifen und Folgendes tun können:",
-	"login.boarding_title": "Einsteigen in Nuclia",
 	"login.check_email.check_spams": "oder schauen Sie in Ihrem Spam-Ordner nach.",
 	"login.check_email.details": "Klicken Sie auf den Aktivierungslink, den wir Ihnen gerade an <strong>{{ email }}</strong>gesendet haben. ",
 	"login.check_email.email_sent": "Wir haben Ihnen eine E-Mail geschickt!",
@@ -15,9 +14,6 @@
 	"login.description": "Wissen Sie, was Ihr Unternehmen weiß",
 	"login.dont_see": "Siehst du es nicht?",
 	"login.email": "Email",
-	"login.email_already_exists": "Diese Emailadresse existiert bereits!",
-	"login.email_signup": "Professionelle E-Mail",
-	"login.email_signup_help": "Pflichtfeld. Nur Firmen-E-Mail-Adressen zulässig.",
 	"login.error.auth_error": "Authentifizierungsfehler.",
 	"login.error.get_consent_error": "Beim Abrufen der Einwilligungsinformationen ist ein Fehler aufgetreten",
 	"login.error.google_workspace": "Die Anmeldung bei Google ist leider auf Workspace-Domains beschränkt.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Vollständiger Name",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Sie haben noch kein Konto?",
-	"login.have_account_already": "Hast du schon ein Konto?",
 	"login.login": "Einloggen",
 	"login.password": "Passwort",
 	"login.recover": "Passwort wiederherstellen",
 	"login.recover_help": "Probleme beim Einloggen?",
 	"login.scope.kbs_read": "Sehen Sie sich Ihre Wissensboxen an",
 	"login.scope.kbs_write": "Ändern Sie Ihre Wissensboxen",
-	"login.sign-up-with": "Mit {{provider}} anmelden",
-	"login.signup": "Anmelden",
 	"login.subtitle": "Aus Ihren internen Daten die richtigen Antworten liefern.",
 	"login.title": "Willkommen in Nuclia",
 	"login.token_expired": "Token ist abgelaufen",
@@ -75,6 +68,13 @@
 	"recover.recover": "Genesen",
 	"recover.title": "ERHALTEN SIE IHR PASSWORT",
 	"recover.verify": "Überprüfen Sie Ihre E-Mails und verwenden Sie den bereitgestellten Link, um Ihr Passwort zu ändern",
+	"signup.email.already_exists": "Diese Emailadresse existiert bereits!",
+	"signup.email.help": "Pflichtfeld. Nur Firmen-E-Mail-Adressen zulässig.",
+	"signup.have_account_already": "Hast du schon ein Konto?",
+	"signup.name": "Name",
+	"signup.sign-up-with": "Mit {{provider}} anmelden",
+	"signup.signup-button-label": "Anmelden",
+	"signup.title": "Kostenlos loslegen",
 	"validation.company-email": "Bitte verwenden Sie eine Firmen-E-Mail",
 	"validation.email": "Geben Sie eine gültige E-Mail-Adresse ein",
 	"validation.password_minlength": "Das Passwort muss mindestens 8 Zeichen lang sein",
