--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Logout",
 	"generic.or": "Or",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
-	"login.boarding_title": "Boarding Nuclia",
 	"login.check_email.check_spams": "or check your spam folder.",
 	"login.check_email.details": "Click on the activation link we just sent you at <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "We’ve sent you an email!",
@@ -15,9 +14,6 @@
 	"login.description": "Know what your company knows",
 	"login.dont_see": "Don’t see it?",
 	"login.email": "Email",
-	"login.email_already_exists": "This email address already exists! ",
-	"login.email_signup": "Professional email",
-	"login.email_signup_help": "Required field. Only company email addresses allowed.",
 	"login.error.auth_error": "Authentication error.",
 	"login.error.get_consent_error": "An error occurred while retrieving consent information",
 	"login.error.google_workspace": "Sign up with Google is restricted to workspace domains, sorry.",
@@ -30,15 +26,12 @@
 	"login.full_name": "Full name",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Don’t have an account?",
-	"login.have_account_already": "Already have an account?",
 	"login.login": "Log in",
 	"login.password": "Password",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
 	"login.scope.kbs_read": "View your Knowledge Boxes",
 	"login.scope.kbs_write": "Modify your Knowledge Boxes",
-	"login.sign-up-with": "Sign up with {{provider}}",
-	"login.signup": "Sign Up",
 	"login.subtitle": "Delivering the right answers from your internal data.",
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
@@ -75,6 +68,13 @@
 	"recover.recover": "Recover",
 	"recover.title": "Recover your password",
 	"recover.verify": "Check your email and use the provided link to change your password",
+	"signup.email.already_exists": "This email address already exists! ",
+	"signup.email.help": "Required field. Only company email addresses allowed.",
+	"signup.have_account_already": "Already have an account?",
+	"signup.name": "Name",
+	"signup.sign-up-with": "Sign up with {{provider}}",
+	"signup.signup-button-label": "Sign Up",
+	"signup.title": "Get started for free",
 	"validation.company-email": "Please use a company email",
 	"validation.email": "Enter a valid email",
 	"validation.password_minlength": "Password must be at least 8 characters long",
