[sc-7722] New onboarding flow
  - New wording on sign-up and first questions
  - Refactor onboarding in several steps
  - Update zone service to optionally return zones not available yet
  - Don't display "create account" and "manage account" options at the same time in the user menu
  - Update sistema default border radius to be 0 as in figma (impacting mainly checkboxes and popups)

--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -36,32 +36,60 @@
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
-	"onboarding.account_creation": "Account creation…",
-	"onboarding.company": "What company are you working for?",
-	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
-	"onboarding.get_started": "Get started",
-	"onboarding.host_db": "Will you want to host the database in your infrastructure?",
-	"onboarding.host_db_help": "Required field. This does not affect your users experience.",
-	"onboarding.host_db_no": "No, I prefer to use Nuclia’s cloud",
-	"onboarding.host_db_yes": "Yes, I will host NucliaDB in my infrastructure",
-	"onboarding.invalid_phone_code": "Invalid code",
-	"onboarding.invalid_phone_number": "Invalid phone number",
-	"onboarding.kb_creation": "Storage creation…",
-	"onboarding.org_size": "How big is your organization?",
-	"onboarding.phone": "Phone number",
-	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
-	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
-	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">fill this form</a>.",
-	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
-	"onboarding.title": "👋​ Welcome to Nuclia!",
-	"onboarding.updates": "Get occasional updates about Nuclia",
-	"onboarding.use_case.ai_training": "AI model training",
-	"onboarding.use_case.global_search": "Global site search",
-	"onboarding.use_case.other": "Other",
-	"onboarding.use_case.research_analysis": "Research & Analysis",
-	"onboarding.use_case.support": "Customer / employee support",
-	"onboarding.use_case.workspace_search": "Workspace Search",
-	"onboarding.use_case_label": "What is your main use case?",
+	"onboarding.next-button": "Next",
+	"onboarding.setting-up.account_creation": "Account creation…",
+	"onboarding.setting-up.import_dataset": "Importing your sample dataset...",
+	"onboarding.setting-up.kb_creation": "Storage creation…",
+	"onboarding.setting-up-dataset.import-failed": "Dataset import failed, but don't worry you'll be able to import a dataset again in the next step",
+	"onboarding.setting-up-dataset.subtitle": "You'll be ready for your first search in less than a minute!",
+	"onboarding.setting-up-dataset.title": "We’re working some magic behind the scenes...",
+	"onboarding.setting-up-upload.subtitle": "Upload your data in the next step, and once processed, you'll be ready for your first search.",
+	"onboarding.setting-up-upload.title": "Let's get ready to import your data",
+	"onboarding.step1.company": "Company name",
+	"onboarding.step1.host_db.help": "Required field. This does not affect your users experience.",
+	"onboarding.step1.host_db.label": "Will you want to host the database in your infrastructure?",
+	"onboarding.step1.host_db.no": "No, I prefer to use Nuclia’s cloud",
+	"onboarding.step1.host_db.yes": "Yes, I will host NucliaDB in my infrastructure",
+	"onboarding.step1.invalid_phone_code": "Invalid code",
+	"onboarding.step1.invalid_phone_number": "Invalid phone number",
+	"onboarding.step1.org_size": "What is your company size?",
+	"onboarding.step1.phone": "Phone number",
+	"onboarding.step1.subtitle": "A couple of quick questions, and we'll get you started.",
+	"onboarding.step1.title": "Welcome to Nuclia! 👋​",
+	"onboarding.step1.updates": "Get occasional updates about Nuclia",
+	"onboarding.step1.use_case.ai_training": "AI model training",
+	"onboarding.step1.use_case.global_search": "Global site search",
+	"onboarding.step1.use_case.label": "What is your main use case?",
+	"onboarding.step1.use_case.other": "Other",
+	"onboarding.step1.use_case.research_analysis": "Research & Analysis",
+	"onboarding.step1.use_case.support": "Customer / employee support",
+	"onboarding.step1.use_case.workspace_search": "Workspace Search",
+	"onboarding.step2.coming-soon": "(available soon)",
+	"onboarding.step2.consent": "By using Nuclia, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.step2.languages.arabic": "Arabic",
+	"onboarding.step2.languages.catalan": "Catalan",
+	"onboarding.step2.languages.chinese": "Chinese",
+	"onboarding.step2.languages.danish": "Danish",
+	"onboarding.step2.languages.english": "English",
+	"onboarding.step2.languages.finnish": "Finnish",
+	"onboarding.step2.languages.french": "French",
+	"onboarding.step2.languages.german": "German",
+	"onboarding.step2.languages.italian": "Italian",
+	"onboarding.step2.languages.japanese": "Japanese",
+	"onboarding.step2.languages.label": "Select the language(s) that most of your data and content uses",
+	"onboarding.step2.languages.multilingual": "Multilingual",
+	"onboarding.step2.languages.norwegian": "Norwegian",
+	"onboarding.step2.languages.other": "Other",
+	"onboarding.step2.languages.portuguese": "Portuguese",
+	"onboarding.step2.languages.spanish": "Spanish",
+	"onboarding.step2.languages.swedish": "Swedish",
+	"onboarding.step2.region-label": "Select a region to host your search data",
+	"onboarding.step2.starting-data.dataset": "Use a sample data set",
+	"onboarding.step2.starting-data.dataset-label": "Select sample dataset",
+	"onboarding.step2.starting-data.label": "How do you want to start?",
+	"onboarding.step2.starting-data.upload": "Upload my own data",
+	"onboarding.step2.subtitle": "Set these parameters to customize your account",
+	"onboarding.step2.title": "Let's get you set up",
 	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
 	"recover.gologin": "Go to the login page",
 	"recover.gologin_help": "Do you remember your password?",
