--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -36,32 +36,60 @@
 	"login.title": "Bienvenidos a Nuclia",
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
-	"onboarding.account_creation": "Creación de cuenta…",
-	"onboarding.company": "¿Para qué empresa estás trabajando?",
-	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
-	"onboarding.get_started": "Empezar",
-	"onboarding.host_db": "¿Querrá alojar la base de datos en su infraestructura?",
-	"onboarding.host_db_help": "Campo requerido. Esto no afecta la experiencia de sus usuarios.",
-	"onboarding.host_db_no": "No, prefiero usar la nube de Nuclia",
-	"onboarding.host_db_yes": "Sí, alojaré NucliaDB en mi infraestructura",
-	"onboarding.invalid_phone_code": "Codigo invalido",
-	"onboarding.invalid_phone_number": "Numero de telefono invalido",
-	"onboarding.kb_creation": "Creación de almacenamiento…",
-	"onboarding.org_size": "¿Qué tan grande es su organización?",
-	"onboarding.phone": "Número de teléfono",
-	"onboarding.setting_up": "⏳ ​ Estamos configurando tu cuenta",
-	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
-	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">complete este formulario</a>.",
-	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
-	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
-	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
-	"onboarding.use_case.ai_training": "Entrenamiento del modelo de IA",
-	"onboarding.use_case.global_search": "Búsqueda global del sitio",
-	"onboarding.use_case.other": "Otros",
-	"onboarding.use_case.research_analysis": "Investigación y análisis",
-	"onboarding.use_case.support": "Asistencia a clientes y empleados",
-	"onboarding.use_case.workspace_search": "Búsqueda de espacio de trabajo",
-	"onboarding.use_case_label": "¿Cuál es su principal caso de uso?",
+	"onboarding.next-button": "Siguiente",
+	"onboarding.setting-up.account_creation": "Creación de cuenta…",
+	"onboarding.setting-up.import_dataset": "Importando su conjunto de datos...",
+	"onboarding.setting-up.kb_creation": "Creación de almacenamiento…",
+	"onboarding.setting-up-dataset.import-failed": "La importación del conjunto de datos falló, pero no se preocupe, podrá volver a importar un conjunto de datos en el siguiente paso.",
+	"onboarding.setting-up-dataset.subtitle": "¡Estarás listo para tu primera búsqueda en menos de un minuto!",
+	"onboarding.setting-up-dataset.title": "Estamos configurando tu cuenta",
+	"onboarding.setting-up-upload.subtitle": "Cargue sus datos en el siguiente paso y, una vez procesados, estará listo para su primera búsqueda.",
+	"onboarding.setting-up-upload.title": "Preparémonos para importar tus datos.",
+	"onboarding.step1.company": "Nombre de empresa",
+	"onboarding.step1.host_db.help": "Campo requerido. Esto no afecta la experiencia de sus usuarios.",
+	"onboarding.step1.host_db.label": "¿Querrá alojar la base de datos en su infraestructura?",
+	"onboarding.step1.host_db.no": "No, prefiero usar la nube de Nuclia",
+	"onboarding.step1.host_db.yes": "Sí, alojaré NucliaDB en mi infraestructura",
+	"onboarding.step1.invalid_phone_code": "Codigo invalido",
+	"onboarding.step1.invalid_phone_number": "Numero de telefono invalido",
+	"onboarding.step1.org_size": "¿Cuál es el tamaño de su empresa?",
+	"onboarding.step1.phone": "Número de teléfono",
+	"onboarding.step1.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
+	"onboarding.step1.title": "¡Bienvenidos a Nuclia! 👋​ ",
+	"onboarding.step1.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
+	"onboarding.step1.use_case.ai_training": "Entrenamiento del modelo de IA",
+	"onboarding.step1.use_case.global_search": "Búsqueda global del sitio",
+	"onboarding.step1.use_case.label": "¿Cuál es su principal caso de uso?",
+	"onboarding.step1.use_case.other": "Otros",
+	"onboarding.step1.use_case.research_analysis": "Investigación y análisis",
+	"onboarding.step1.use_case.support": "Asistencia a clientes y empleados",
+	"onboarding.step1.use_case.workspace_search": "Búsqueda de espacio de trabajo",
+	"onboarding.step2.coming-soon": "(disponible pronto)",
+	"onboarding.step2.consent": "Al utilizar Nuclia, aceptas los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.step2.languages.arabic": "Arábica",
+	"onboarding.step2.languages.catalan": "Catalán",
+	"onboarding.step2.languages.chinese": "Chino",
+	"onboarding.step2.languages.danish": "Danés",
+	"onboarding.step2.languages.english": "Inglés",
+	"onboarding.step2.languages.finnish": "Finlandés",
+	"onboarding.step2.languages.french": "Francés",
+	"onboarding.step2.languages.german": "Alemán",
+	"onboarding.step2.languages.italian": "Italiano",
+	"onboarding.step2.languages.japanese": "Japonés",
+	"onboarding.step2.languages.label": "Seleccione los idiomas que utilizan la mayoría de sus datos y contenidos",
+	"onboarding.step2.languages.multilingual": "Plurilingüe",
+	"onboarding.step2.languages.norwegian": "Noruego",
+	"onboarding.step2.languages.other": "Otro",
+	"onboarding.step2.languages.portuguese": "Portugués",
+	"onboarding.step2.languages.spanish": "Español",
+	"onboarding.step2.languages.swedish": "Sueco",
+	"onboarding.step2.region-label": "Seleccione una región para alojar sus datos de búsqueda",
+	"onboarding.step2.starting-data.dataset": "Utilice un conjunto de datos de muestra",
+	"onboarding.step2.starting-data.dataset-label": "Seleccionar conjunto de datos de muestra",
+	"onboarding.step2.starting-data.label": "¿Cómo quieres empezar?",
+	"onboarding.step2.starting-data.upload": "Subir mis propios datos",
+	"onboarding.step2.subtitle": "Establezca estos parámetros para personalizar su cuenta",
+	"onboarding.step2.title": "Vamos a configurarlo",
 	"recover.description": "Escribe tu dirección de correo electrónico y sigue las indicaciones para recuperar la contraseña",
 	"recover.gologin": "Ir a la pagina de login.",
 	"recover.gologin_help": "¿Ya te acuerdas de tu contraseña?",
@@ -80,6 +108,6 @@
 	"validation.password_minlength": "La contraseña debe tener al menos 8 caracteres",
 	"validation.password_mismatch": "Ups! La contraseña no coincide",
 	"validation.password_required": "Elije una contraseña",
-	"validation.required": "Este campo es obligatorio",
+	"validation.required": "Campo requerido",
 	"validation.required_short": "Necesario"
 }
