--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -36,32 +36,60 @@
 	"login.title": "Bem-vindo à Nuclia",
 	"login.token_expired": "O token expirou",
 	"login.try_again": "Tente novamente ou redefina sua senha abaixo.",
-	"onboarding.account_creation": "Criação de conta…",
-	"onboarding.company": "Para qual empresa você trabalha?",
-	"onboarding.consent": "Ao usar este produto, você aceita os <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termos e Condições</a> e a <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>.",
-	"onboarding.get_started": "Iniciar",
-	"onboarding.host_db": "Você deseja hospedar o banco de dados em sua infraestrutura?",
-	"onboarding.host_db_help": "Campo obrigatório. Isso não afeta a experiência do usuário.",
-	"onboarding.host_db_no": "Não, prefiro usar a nuvem da Nuclia",
-	"onboarding.host_db_yes": "Sim, hospedarei o NucliaDB em minha infraestrutura",
-	"onboarding.invalid_phone_code": "Código inválido",
-	"onboarding.invalid_phone_number": "Número de telefone inválido",
-	"onboarding.kb_creation": "Criação de armazenamento…",
-	"onboarding.org_size": "Qual é o tamanho da sua organização?",
-	"onboarding.phone": "Número de telefone",
-	"onboarding.setting_up": "⏳ ​ Estamos configurando sua conta",
-	"onboarding.setting_up_subtitle": "Sua conta estará pronta em menos de um minuto!",
-	"onboarding.storage_zone": "Os seus dados serão alojados na Europa. Se desejar que seus dados sejam hospedados em outro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">preencha este formulário</a>.",
-	"onboarding.subtitle": "Algumas perguntas rápidas e começaremos.",
-	"onboarding.title": "👋​ Bem-vindo à Nuclia!",
-	"onboarding.updates": "Receba atualizações ocasionais sobre Nuclia",
-	"onboarding.use_case.ai_training": "Treinamento de modelo de IA",
-	"onboarding.use_case.global_search": "Pesquisa global de sites",
-	"onboarding.use_case.other": "De outros",
-	"onboarding.use_case.research_analysis": "Pesquisa e Análise",
-	"onboarding.use_case.support": "Suporte ao cliente/funcionário",
-	"onboarding.use_case.workspace_search": "Pesquisa de espaço de trabalho",
-	"onboarding.use_case_label": "Qual é o seu principal caso de uso?",
+	"onboarding.next-button": "Próximo",
+	"onboarding.setting-up.account_creation": "Criação de conta…",
+	"onboarding.setting-up.import_dataset": "Importando seu conjunto de dados...",
+	"onboarding.setting-up.kb_creation": "Criação de armazenamento…",
+	"onboarding.setting-up-dataset.import-failed": "Falha na importação do conjunto de dados, mas não se preocupe, você poderá importar um conjunto de dados novamente na próxima etapa",
+	"onboarding.setting-up-dataset.subtitle": "Você estará pronto para sua primeira pesquisa em menos de um minuto!",
+	"onboarding.setting-up-dataset.title": "Estamos configurando sua conta",
+	"onboarding.setting-up-upload.subtitle": "Carregue seus dados na próxima etapa e, uma vez processados, você estará pronto para sua primeira pesquisa.",
+	"onboarding.setting-up-upload.title": "Vamos nos preparar para importar seus dados",
+	"onboarding.step1.company": "Nome da empresa",
+	"onboarding.step1.host_db.help": "Campo obrigatório. Isso não afeta a experiência do usuário.",
+	"onboarding.step1.host_db.label": "Você deseja hospedar o banco de dados em sua infraestrutura?",
+	"onboarding.step1.host_db.no": "Não, prefiro usar a nuvem da Nuclia",
+	"onboarding.step1.host_db.yes": "Sim, hospedarei o NucliaDB em minha infraestrutura",
+	"onboarding.step1.invalid_phone_code": "Código inválido",
+	"onboarding.step1.invalid_phone_number": "Número de telefone inválido",
+	"onboarding.step1.org_size": "Qual é o tamanho da sua empresa?",
+	"onboarding.step1.phone": "Número de telefone",
+	"onboarding.step1.subtitle": "Algumas perguntas rápidas e começaremos.",
+	"onboarding.step1.title": "Bem-vindo à Nuclia! 👋​ ",
+	"onboarding.step1.updates": "Receba atualizações ocasionais sobre Nuclia",
+	"onboarding.step1.use_case.ai_training": "Treinamento de modelo de IA",
+	"onboarding.step1.use_case.global_search": "Pesquisa global de sites",
+	"onboarding.step1.use_case.label": "Qual é o seu principal caso de uso?",
+	"onboarding.step1.use_case.other": "De outros",
+	"onboarding.step1.use_case.research_analysis": "Pesquisa e Análise",
+	"onboarding.step1.use_case.support": "Suporte ao cliente/funcionário",
+	"onboarding.step1.use_case.workspace_search": "Pesquisa de espaço de trabalho",
+	"onboarding.step2.coming-soon": "(disponível em breve)",
+	"onboarding.step2.consent": "Ao usar a Nuclia, você aceita os <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termos e Condições</a> e a <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>.",
+	"onboarding.step2.languages.arabic": "Árabe",
+	"onboarding.step2.languages.catalan": "Catalão",
+	"onboarding.step2.languages.chinese": "Chinês",
+	"onboarding.step2.languages.danish": "Dinamarquês",
+	"onboarding.step2.languages.english": "Inglês",
+	"onboarding.step2.languages.finnish": "Finlandês",
+	"onboarding.step2.languages.french": "Francês",
+	"onboarding.step2.languages.german": "Alemão",
+	"onboarding.step2.languages.italian": "Italiano",
+	"onboarding.step2.languages.japanese": "Japonês",
+	"onboarding.step2.languages.label": "Selecione o(s) idioma(s) que a maioria dos seus dados e conteúdo usa",
+	"onboarding.step2.languages.multilingual": "Multilíngue",
+	"onboarding.step2.languages.norwegian": "Norueguês",
+	"onboarding.step2.languages.other": "De outros",
+	"onboarding.step2.languages.portuguese": "Português",
+	"onboarding.step2.languages.spanish": "Espanhol",
+	"onboarding.step2.languages.swedish": "Sueco",
+	"onboarding.step2.region-label": "Selecione uma região para hospedar seus dados de pesquisa",
+	"onboarding.step2.starting-data.dataset": "Use um conjunto de dados de amostra",
+	"onboarding.step2.starting-data.dataset-label": "Selecione o conjunto de dados de amostra",
+	"onboarding.step2.starting-data.label": "Como você quer começar?",
+	"onboarding.step2.starting-data.upload": "Carregar meus próprios dados",
+	"onboarding.step2.subtitle": "Defina estes parâmetros para personalizar sua conta",
+	"onboarding.step2.title": "Vamos preparar você",
 	"recover.description": "Perdeu sua senha? Vamos consertar isso. Basta inserir o endereço de e-mail com o qual você se registrou e iniciaremos o procedimento de recuperação.",
 	"recover.gologin": "Vá para a página de login",
 	"recover.gologin_help": "Você se lembra da sua senha?",
